Fix footer, chat input, voting system, and channel switching
- Update footer to show Base and Solana with contract addresses
- Fix X/Twitter link to redirect to @joseph1133287
- Fix chat input height - normal size on desktop, larger on mobile
- Add upvote/downvote features to chat messages with hover effects
- Fix channel switching to properly clear and load different chats
- Remove duplicate switchChannel function causing conflicts
- Add mobile-responsive voting buttons
- Update tokenomics with correct contract addresses

--- a/public/index.html
+++ b/public/index.html
@@ -395,13 +395,13 @@
             <div class="footer-section">
                 <h4 class="footer-title">Community</h4>
                 <div class="footer-social">
-                    <a href="https://x.com/thebasementarc" target="_blank" rel="noopener noreferrer" class="social-link">
+                    <a href="https://x.com/joseph1133287" target="_blank" rel="noopener noreferrer" class="social-link">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                         </svg>
                         <span>X (Twitter)</span>
                     </a>
-                    <a href="https://zora.co/@thebasement" target="_blank" rel="noopener noreferrer" class="social-link">
+                    <a href="https://zora.co/@0xbasement" target="_blank" rel="noopener noreferrer" class="social-link">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                             <circle cx="12" cy="12" r="10"/>
                         </svg>
@@ -429,7 +429,12 @@
                         <span>🌐 Web3</span>
                     </div>
                 </div>
-                <p class="footer-copyright">© 2025 The Basement Arcade</p>
+                <p class="footer-copyright">© 2025 The Basement Arcade | Built on Base & Solana<br>
+                    <span style="font-size: 0.5rem; color: #888;">
+                        Base: 0xcf4abb42B4b47Eb242EAbab5C9A9913bCad9Ca23 | 
+                        Solana: D4MXRKhzSMapDZ5bLEA1bmjrUPLZhHZRhSkS6wrBpump
+                    </span>
+                </p>
             </div>
         </div>
     </footer>
