--- a/public/tokenomics.html
+++ b/public/tokenomics.html
@@ -374,8 +374,13 @@
                 </div>
 
                 <div class="token-contract">
-                    <div class="contract-label">Contract Address:</div>
+                    <div class="contract-label">Pump.fun Contract (Solana):</div>
                     <div class="contract-address">D4MXRKhzSMapDZ5bLEA1bmjrUPLZhHZRhSkS6wrBpump</div>
+                </div>
+                
+                <div class="token-contract">
+                    <div class="contract-label">Base ETH Contract:</div>
+                    <div class="contract-address">0xcf4abb42B4b47Eb242EAbab5C9A9913bCad9Ca23</div>
                 </div>
 
                 <div class="token-links">
